--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" 
+        content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Вариант 23 {% endblock %}</title>
+    <link rel="shortcut icon" 
+        href="https://raw.githubusercontent.com/AndyTech-IT/ISS_Project/master/static/favicon.ico">
 </head>
 <body>
     <style>
