--- a/templates/variant_23/first.html
+++ b/templates/variant_23/first.html
@@ -28,6 +28,7 @@
     .back .head h2{
         text-align: center;
         text-transform: uppercase;
+        font-size: 1.7em;
         margin: 0;
         background: burlywood;
         position: absolute;
@@ -42,7 +43,7 @@
     .head::before {
         content: "";
         border-radius: 4px;
-        background: chocolate;
+        background: rgb(155, 80, 20);
         width: 100%;
         height: 5px;
         display: block;
