--- a/templates/variant_23/second.html
+++ b/templates/variant_23/second.html
@@ -9,49 +9,91 @@
         width: 50em;
         height: 100%;
     }
-    .back table {
+    .caption h2 {
+        text-align: center;
+        font-size: 1.2em;
+        margin: 0;
+        background: burlywood;
+        text-transform: uppercase;
+        position: absolute;
+        padding: 0 10px;
+    }
+    .caption{
+        margin: 0;
+        position: relative;
+        display: flex;
+        justify-content: center;
+    }
+    .caption::before {
+        content: "";
+        border-radius: 4px;
+        background: rgb(155, 80, 20);
+        width: 100%;
+        height: 5px;
+        display: block;
+        position: absolute;
+        top: calc(50% + .6em)
+    }
+    caption {
+        height: 3em;
+    }
+    table {
         width: 100%;
         height: 100%;
         text-align: center;
         font-size: 1.5em;
+        border: rgb(155, 80, 20) solid;
     }
-    .left {
-        border-right: chocolate solid;
+    thead::after, tfoot::before {
+        content: "";
+        background-color: rgb(155, 80, 20);
+        display: block;
+        width: 303%;
+        height: 4px;
+        position: relative;
+        right: 1px;
     }
-    .right {
-        border-left: chocolate solid;
+    thead th {
+        width: 10em;
     }
-    th, td {
-        border-bottom: chocolate solid;
-    }
-    table {
-        border-left: chocolate solid;
-        border-right: chocolate solid;
-        border-top: chocolate solid;
+    tfoot th{
+        text-align: right;
     }
 </style>
 
 <div class="back">
     {% if orders_list %}
-        <table >
+    <table>
+        <caption>
+            <div class="caption">
+                <h2>{{costomer.CNAME}} - список заказов</h2>
+            </div>
+        </caption>
+        <thead>
             <tr>
-                <th colspan="3">{{costomer.CNAME}} - список заказов </th>
+                <th> Номер заказа </th>
+                <th class="center-column"> Сумма заказа </th>
+                <th> Дата заказа </th>
             </tr>
+        </thead>
+        <tbody>
+        {% for order in orders_list %}
             <tr>
-                <th class="left"> Номер заказа </th>
-                <th> Сумма заказа </th>
-                <th class="right"> Дата  заказа </th>
+                <td>{{order.ONUM}}</td>
+                <td class="center-column">{{order.AMT}} руб.</td>
+                <td>{{order.ODATE}}</td>
             </tr>
-            {% for order in orders_list %}
-                <tr>
-                    <td class="left">{{order.ONUM}}</td>
-                    <td>{{order.AMT}}</td>
-                    <td class="right">{{order.ODATE}}</td>
-                </tr>
-            {% endfor %}
-        </table>
+        {% endfor %}
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="2">Итоговая стоимость заказов: </th>
+                <td>{{summ}} руб.</td>
+            </tr>
+        </tfoot>
+    </table>
     {% else %}
-        <h1> Заказы не найдены </h1>
+    <h1> Заказы не найдены </h1>
     {% endif %}
 </div>
 
